images load faster, and with all the speed

--- a/gallery.html
+++ b/gallery.html
@@ -192,7 +192,39 @@
             (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
         }());
     </script>
-
+    <img src="screenshots/1.jpg" height=0px width=0px>
+    <img src="screenshots/2.jpg" height=0px width=0px>
+    <img src="screenshots/3.jpg" height=0px width=0px>
+    <img src="screenshots/4.jpg" height=0px width=0px>
+    <img src="screenshots/5.jpg" height=0px width=0px>
+    <img src="screenshots/6.jpg" height=0px width=0px>
+    <img src="screenshots/7.jpg" height=0px width=0px>
+    <img src="screenshots/8.jpg" height=0px width=0px>
+    <img src="screenshots/9.jpg" height=0px width=0px>
+    <img src="screenshots/10.jpg" height=0px width=0px>
+    <img src="screenshots/11.jpg" height=0px width=0px>
+    <img src="screenshots/12.jpg" height=0px width=0px>
+    <img src="screenshots/13.jpg" height=0px width=0px>
+    <img src="screenshots/14.jpg" height=0px width=0px>
+    <img src="screenshots/15.jpg" height=0px width=0px>
+    <img src="screenshots/16.jpg" height=0px width=0px>
+    <img src="screenshots/17.jpg" height=0px width=0px>
+    <img src="screenshots/18.jpg" height=0px width=0px>
+    <img src="screenshots/19.jpg" height=0px width=0px>
+    <img src="screenshots/20.jpg" height=0px width=0px>
+    <img src="screenshots/21.jpg" height=0px width=0px>
+    <img src="screenshots/22.jpg" height=0px width=0px>
+    <img src="screenshots/23.jpg" height=0px width=0px>
+    <img src="screenshots/24.jpg" height=0px width=0px>
+    <img src="screenshots/25.jpg" height=0px width=0px>
+    <img src="screenshots/26.jpg" height=0px width=0px>
+    <img src="screenshots/27.jpg" height=0px width=0px>
+    <img src="screenshots/28.jpg" height=0px width=0px>
+    <img src="screenshots/29.jpg" height=0px width=0px>
+    <img src="screenshots/30.jpg" height=0px width=0px>
+    <img src="screenshots/31.jpg" height=0px width=0px>
+    <img src="screenshots/32.jpg" height=0px width=0px>
+    <img src="screenshots/33.jpg" height=0px width=0px>
 </body>
 <footer>
     <table class="bottom widescreen" border="0" style="background:linear-gradient(rgba(0,0,0,0) ,#000000);height:39%;px;z-index:-1;">
