--- a/gallery.html
+++ b/gallery.html
@@ -24,7 +24,7 @@
     <script>
         var currphoto;
         var timer;
-        currphoto = '1';
+        currphoto = 1;
 
         function next() {
             if(currphoto == 33) {
