--- a/gallery.html
+++ b/gallery.html
@@ -21,7 +21,10 @@
     <!--resize everything to fit most screensizes-->
     <meta name=viewport content="width=device-width, initial-scale=1">
     <!--gallery code-->
-    <script src="photos.js/photo.js">
+    <script src="photos.js/photo.js"></script>
+    <script>
+    photoTotal = 33;
+    imgWidth = 790;
     </script>
     <title>Gallery - ACE12</title>
 </head>
