add content script, nothing exists yet

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   <link rel="import" href="bower_components/core-icons/communication-icons.html">
   <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
 
-  <!--META tag for browser size on mobile-->
+  <!--content script linking-->
+  <script src="contentLink.js"></script>
 
   <!--META tag for browser size on mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
