add content area

--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
         </core-item>
       </core-menu>
     </core-header-panel>
+    <div tool id="navheader">
+      <core-icon icon="home"></core-icon>Home
+    </div>
+    <div>
+      <div id="content-area">
+      </div>
+    </div>
   </core-scaffold>
 </body>
 </html>
