set master font

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="import" href="bower_components/core-icons/av-icons.html">
     <link rel="import" href="bower_components/core-icons/editor-icons.html">
     <link rel="import" href="bower_components/core-icons/communication-icons.html">
-    <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+    <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 
   <!--content script linking-->
     <script src="contentLink.js"></script>
@@ -27,6 +27,10 @@
     /*coloring for bar*/
     body /deep/ core-toolbar {
         background-color:#bb0900;
+    }
+    /*master font==ubuntu*/
+    body {
+      font-family: 'Ubuntu', sans-serif;
     }
   </style>
 </head>
