--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="import" href="bower_components/core-icons/av-icons.html">
     <link rel="import" href="bower_components/core-icons/editor-icons.html">
     <link rel="import" href="bower_components/core-icons/communication-icons.html">
+    <link rel="import" href="bower_components/google-youtube/google-youtube.html">
     <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 
   <!--content script linking-->
@@ -63,6 +64,7 @@
     </div>
     <div>
       <div id="content-area">
+        <google-youtube videoid="ETKgLPtVcYc"></google-youtube>
       </div>
     </div>
   </core-scaffold>
